Commit for fixed admin player settings alignment issue in HD Video Share 3.4.1

--- a/admin/css/styles.css
+++ b/admin/css/styles.css
@@ -296,3 +296,11 @@ control panel css end
 .videoshare_closeimage{width:15px;}
 
 #adminForm .admintable .button2-left{margin: 10px 0 0;}
+.google_analytics{
+    float: right;
+    width: 76%;
+}
+.google_analytics span{display: block;float: left;width: 205px;font-weight: bold;}
+.google_analytics input{
+    float: left;
+}
